Flink: update configurations, scripts, and dependencies for improved Kafka and Iceberg integration